--- a/08.Filosofia.tex
+++ b/08.Filosofia.tex
@@ -1,29 +1,31 @@
-\chapter{EL SERIALISMO EN LA FILOSOFÍA DEL ARTE}\label{ch:filosofia}
+\section{EL SERIALISMO EN LA FILOSOFÍA DEL ARTE}\label{ch:filosofia}
 	 % TODO
         % 08.Recorrido filosófico histórico, filosofía del arte (quotes), motivos míos (filosofía actual)
-    \section{Recorrido filosófico del serialismo}
-    Schoenberg thought 'classical' tonality (aka. common-practise) was a social construct, every law was arbitrary, and that people enjoyed that kind of music because the system had internal consistency. Therefore, he created a new system (12-tone) that in his opinion had the same logic. He believed that in 100 years lay people would be singing his tunes!!
+%    \subsection{Recorrido filosófico del serialismo}
+%    Schoenberg thought 'classical' tonality (aka. common-practise) was a social construct, every law was arbitrary, and that people enjoyed that kind of music because the system had internal consistency. Therefore, he created a new system (12-tone) that in his opinion had the same logic. He believed that in 100 years lay people would be singing his tunes!!
+%    
+%    Some aspects of traditional tonality *are* arbitrary, e.g. Why are maj./min. chords consonant but 7ths and 9ths not? We could move the line and say that 7ths are consonant too but 9ths still not, etc. Also, we could use scales from 'foreign' musical traditions, like the acoustic scale, and so on.
+%    
+%    Studies show that some concepts are universal. E.g. unrelated cultures like Scotland and China have pentatonic melodies (c-d-e-g-a). That's not a coincidence, most scales around the world share certain properties. In no culture is the octave split in equal intervals (e.g.12), and are all the notes treated equally.
+%    
+%    Debussy, Ravel, and Stravinsky used uncommon scales, harmonies (no tonic/dominant chords...), and rhythms; but they're still popular because they followed some of the musical universals. Also, Indian Ragas, Arabic Maqam, and Blues melodies don't follow traditional tonality, but they can be easily grasped.
+%    
+%    Scriabin too used dissonance and ambiguity, but he isn't atonal in Schoenberg's sense. He mostly used the octatonic scale (used in Jazz, a 'popular' genre), and the acoustic scale (like the Simpsons theme!!). He uses 7 and 8-note scales, not all 12 tones. Also, his harmonies respect the harmonic series and follow a vague form of tonality, e.g. Vers la Flamme begins and ends with a chord built on E, and he 'modulates' by 3rds and tritones.
+%    
+%    Schoenberg and his acolytes were obsessed in making history by writing something radically new. However, I still like some of their stuff, but Berg's concerto isn't beautiful because it's serial, it's rather because he was so cunning that he could 'circumvent' the rules and write something meaningful. Nobody 'hears' a tone row. In some way, when someone says "Boulez's 2nd sonata is random notes", he's actually right, because we can't *hear* the patterns. They can only be *read* in the score. They're the emperor's clothes.
+%    
+%    
+%    Pensive, those are some great points. The systems of tonality vary around the world. However I disagree with you on Schoenberg's reason for developing the twelve tone system. I believe Schoenberg thought the twelve tone system was a natural developm
+%    
+%        
+%    Oh yeah, I was simplyfying a lot about Schoenberg. To be more exact, he (and Webern, Berg...) were first obsessed with the motif (ie. tiny melodic bit). Check out Berg's Piano Sonata: everything's based on the motifs of the very first bars. He thought that if the motif became the strutural 'glue' of a piece, then tonality was not necessary as a 'unifying' force. But that overthrow is controversial, and implies many personal circumstances... Later, he substituted the motif for the tone row as the main principle.
+%    
+%    In any case, Schoenberg's 12-tone technique was not the "natural" continuation of tonality, it was just one alternative. What makes Scriabin's or Stravinski's methods less valid? However, Schoenberg, unlike the others, wrote many many books ('selling' his ideas) that became the official textbooks of many American universities (see http://www.nytimes.com/2000/07/23/arts/l-serialist-history-textbook-dogma-297585.html)... And for a time, contradicting him became a sin (e.g. %http://www.nytimes.com/2000/07/09/arts/music-midcentury-serialists-the-bullies-or-the-besieged.html?pagewanted=all&src=pm).
     
-    Some aspects of traditional tonality *are* arbitrary, e.g. Why are maj./min. chords consonant but 7ths and 9ths not? We could move the line and say that 7ths are consonant too but 9ths still not, etc. Also, we could use scales from 'foreign' musical traditions, like the acoustic scale, and so on.
-    
-    Studies show that some concepts are universal. E.g. unrelated cultures like Scotland and China have pentatonic melodies (c-d-e-g-a). That's not a coincidence, most scales around the world share certain properties. In no culture is the octave split in equal intervals (e.g.12), and are all the notes treated equally.
-    
-    Debussy, Ravel, and Stravinsky used uncommon scales, harmonies (no tonic/dominant chords...), and rhythms; but they're still popular because they followed some of the musical universals. Also, Indian Ragas, Arabic Maqam, and Blues melodies don't follow traditional tonality, but they can be easily grasped.
-    
-    Scriabin too used dissonance and ambiguity, but he isn't atonal in Schoenberg's sense. He mostly used the octatonic scale (used in Jazz, a 'popular' genre), and the acoustic scale (like the Simpsons theme!!). He uses 7 and 8-note scales, not all 12 tones. Also, his harmonies respect the harmonic series and follow a vague form of tonality, e.g. Vers la Flamme begins and ends with a chord built on E, and he 'modulates' by 3rds and tritones.
-    
-    Schoenberg and his acolytes were obsessed in making history by writing something radically new. However, I still like some of their stuff, but Berg's concerto isn't beautiful because it's serial, it's rather because he was so cunning that he could 'circumvent' the rules and write something meaningful. Nobody 'hears' a tone row. In some way, when someone says "Boulez's 2nd sonata is random notes", he's actually right, because we can't *hear* the patterns. They can only be *read* in the score. They're the emperor's clothes.
-    
-    
-    Pensive, those are some great points. The systems of tonality vary around the world. However I disagree with you on Schoenberg's reason for developing the twelve tone system. I believe Schoenberg thought the twelve tone system was a natural developm
-    
-        
-    Oh yeah, I was simplyfying a lot about Schoenberg. To be more exact, he (and Webern, Berg...) were first obsessed with the motif (ie. tiny melodic bit). Check out Berg's Piano Sonata: everything's based on the motifs of the very first bars. He thought that if the motif became the strutural 'glue' of a piece, then tonality was not necessary as a 'unifying' force. But that overthrow is controversial, and implies many personal circumstances... Later, he substituted the motif for the tone row as the main principle.
-    
-    In any case, Schoenberg's 12-tone technique was not the "natural" continuation of tonality, it was just one alternative. What makes Scriabin's or Stravinski's methods less valid? However, Schoenberg, unlike the others, wrote many many books ('selling' his ideas) that became the official textbooks of many American universities (see http://www.nytimes.com/2000/07/23/arts/l-serialist-history-textbook-dogma-297585.html)... And for a time, contradicting him became a sin (e.g. %http://www.nytimes.com/2000/07/09/arts/music-midcentury-serialists-the-bullies-or-the-besieged.html?pagewanted=all&src=pm).
-    
-    \section{La visión artística de Schoenberg}
-    En julio de 1921, tras haber ideado los fundamentos del dodecafonismo, Schoenberg anunció a su discípulo Josef Rufer: \begin{quote}\emph{He realizado un descubrimiento que asegurará la supremacía de la música alemana durante los próximos cien años.}\end{quote}Durante la mayor parte de su vida, Schoenberg creyó que el público general acabaría aceptando la música dodecafónica del mismo modo que se habían aceptado los sistemas tonales durante siglos. No solo eso, sino que pensaba que trascurridos esos cien años los niños cantarían canciones infantiles dodecafónicas por el mundo. El dodecafonismo sería la música del mañana.
+    \subsection{La visión artística de Schoenberg}
+    En julio de 1921, tras haber ideado los fundamentos del dodecafonismo, Schoenberg anunció a su discípulo Josef Rufer:
+    \begin{quote}\emph{He realizado un descubrimiento que asegurará la supremacía de la música alemana durante los próximos cien años.}\end{quote}
+    Durante la mayor parte de su vida, Schoenberg creyó que el público general acabaría aceptando la música dodecafónica del mismo modo que se habían aceptado los sistemas tonales durante siglos. No solo eso, sino que pensaba que trascurridos esos cien años los niños cantarían canciones infantiles dodecafónicas por el mundo. El dodecafonismo sería la música del mañana.
     
     Para él, la naturalidad del sistema dodecafónico residía en que era el resultado final de un proceso histórico: desde el contrapunto y el desarrollo motívico, practicado por los grandes maestros de la tradición alemana, hasta la disolución de la tonalidad, anticipada por la música postwagneriana e impresionista. Era parte de un continuo, del desarrollo de la historia de la música.
     
@@ -46,7 +48,7 @@
     \end{quote}
         
      
-	\section{El valor intrínseco del dodecafonismo}
+	\subsection{El valor intrínseco del dodecafonismo}
 	Tras la muerte de Schoenberg en 1951 y durante dos décadas más, su sistema compositivo fue venerado por los compositores jóvenes más brillantes, pero después se desvaneció de las salas de conciertos y de la memoria musical colectiva. Hoy en día la música dodecafónica está muerta. Ya solo vive académicamente: como un ejemplo que estudiar del éxito de las vanguardias elitistas del siglo XX, como una antigualla en la vitrina de un museo. Pero musicalmente ya nadie la disfruta, nadie desea escucharla ni tocarla.
 	
 	¿Qué valor artístico tiene un arte que ya no se practica? Aún más, ¿qué valor tiene un arte que no gusta, no sólo a las mayorías desinformadas, sino incluso a los músicos más conocedores, un arte que solo gusta al propio autor y a su grupo de discípulos? El dodecafonismo emplea los recursos matemáticos con el fin de dotar de una sintaxis a la atonalidad, pero si estos no son identificables a través de la escucha, ¿cuál es entonces su cometido? ¿En qué medida afectan las reglas dodecafónicas al discurso sonoro de una pieza? Apenas es posible distinguir auditivamente una pieza meramente atonal de una dodecafónica. \cite{basomba}
@@ -63,7 +65,7 @@
 		\emph{Ningún artista, ningún poeta, ningún filósofo y ningún músico, cuyo pensamiento se desenvuelve en la más alta esfera, habrá de descender a la vulgaridad para mostrarse complacientes con un eslogan tal como <<Arte para todos>>. Porque si es arte no será para todos, y si es para todos no será arte.}\footnote{A. Schoenberg, \emph{New Music, Outmoded Music, Style and Idea}, 1946.}
 	\end{quote}
 	
-	\section{Serialismo de escalas no cromáticas}
+	\subsection{Serialismo de escalas no cromáticas}
 	Tras cien años de cambios históricos transcendentales como el desarrollo de la tecnología y la globalización, la definición de arte es muy diferente a la que Schoenberg expresaba en su tiempo. El arte está cada vez más cerca del ciudadano de a pie, y se le intenta explicar y simplificar por todos los medios el arte que no entiende.
 	
 	Por ello, he decidido experimentar con la idea del dodecafonismo y despojarle de lo que, en mi opinión, provoca el rechazo general: la disonancia. Ya que esta proviene del cromatismo, la idea es utilizar escalas que no tengan intervalos de semitono, y con ellas crear un serialismo de menos notas. Modificaré las notas de una obra dodecafónica ya existente para que se adapte a la nueva escala utilizada, mientras que el ritmo, la duración, el timbre y las dinámicas, que siguen siendo producto del compositor original, se dejan intactas.
