--- a/10.Musescore.tex
+++ b/10.Musescore.tex
@@ -1,6 +1,6 @@
 %	\chapter{RESULTADOS DE LAS MODIFICACIONES}
-\chapter{MODIFICACIÓN DE PARTITURAS SERIALISTAS}\label{ch:musescore}
-	\section{Obras modificadas}
+\section{MODIFICACIÓN DE PARTITURAS SERIALISTAS}\label{ch:musescore}
+	\subsection{Obras modificadas}
 	
 	Ahora se describirán las obras que pasarán por la modificación. Para abarcar distintos estilos compositivos y hacer este estudio más riguroso, se han escogido obras de los tres principales compositores dodecafónicos: Schoenberg, Berg y Webern.
 	
@@ -13,6 +13,7 @@
 	La primera obra que pasará por el algoritmo de modificación serial es la \textit{Suite para piano}, Op. 25 de Schoenberg.
 	
 	{Su serie original\footnote{\url{http://www.ccarh.org/publications/data/humdrum/tonerow/files/schoenberg/schoenberg04.pc.krn}} es: \drow{4,5,7,1,6,3,8,2,11,0,9,10}}
+	\ddiagram{4,5,7,1,6,3,8,2,11,0,9,10}
 	
 	La segunda obra es un arreglo para soprano y piano de una de las arias más destacadas de la segunda ópera de Alban Berg, \textit{Lulu}. El libreto de la obra está basado en dos tragedias de Frank Wedekind: ``El espíritu de la tierra'' y ``La Caja de Pandora''.
 	
@@ -20,6 +21,7 @@
 	
 	{La serie de Lulu\footnote{\href{http://www.ccarh.org/publications/data/humdrum/tonerow/files/berg/berg10.pc.krn}{ \texttt{\textasciitilde/berg/berg10.pc.krn} }} es:
 		\drow{0,4,5,2,7,9,6,8,11,10,3,1}}
+	\ddiagram{0,4,5,2,7,9,6,8,11,10,3,1}
 	
 	La tercera, \textit{Der Wein}, es un aria de concierto para soprano y orquesta compuesta por Berg en 1929. La letra es una traducción al alemán de los tres poemas de Charles Baudelaire ``\textit{Le Vin}''. Son una celebración del vino y de la felicidad de quienes lo toman.
 	
@@ -27,40 +29,38 @@
 	
 	{Su serie original\footnote{\href{http://www.ccarh.org/publications/data/humdrum/tonerow/files/berg/berg09.pc.krn}{ \texttt{\textasciitilde/berg/berg09.pc.krn} }} es:        	
 		\drow{2,4,5,7,9,10,1,6,8,0,11,3}}
+	\ddiagram{2,4,5,7,9,10,1,6,8,0,11,3}
 	
 	La cuarta, de 1936, es la única obra publicada de Webern para piano solo: \textit{Variationen für Klavier}, Op. 27, y se compone de tres movimientos: \textit{Sehr mässig}, \textit{Sehr schnell} y \textit{Ruhig fliessend}.
 	
 	{Su serie original\footnote{\href{http://www.ccarh.org/publications/data/humdrum/tonerow/files/webern/webern17.pc.krn}{ \texttt{\textasciitilde/webern/webern17.pc.krn} }} es:
 		\drow{3,11,10,2,1,0,6,4,7,5,9,8}}
+	\ddiagram{3,11,10,2,1,0,6,4,7,5,9,8}
 	
 	Por último, \textit{3 Lieder}, Op. 18, compuesta por Webern en 1925, es un tríptico de Lieder para voz, clarinete y guitarra. Los Lieder, junto con sus respectivas series, son:
 	
 	\textit{Schatzerl Klein}\footnote{\href{http://www.ccarh.org/publications/data/humdrum/tonerow/files/webern/webern06.pc.krn}{ \texttt{\textasciitilde/webern/webern06.pc.krn} }}: \hfill
 	\drow{0,11,5,8,10,9,3,4,1,7,2,6}
+	\ddiagram{0,11,5,8,10,9,3,4,1,7,2,6}
 	
 	\textit{Erlosung}\footnote{\href{http://www.ccarh.org/publications/data/humdrum/tonerow/files/webern/webern07.pc.krn}{ \texttt{\textasciitilde/webern/webern07.pc.krn} }}: \hfill
 	\drow{6,9,5,8,4,7,3,11,2,10,1,0}
+	\ddiagram{6,9,5,8,4,7,3,11,2,10,1,0}
 	
-	\full{\textit{Ave, Regina Coelorum}\footnotemark: \hfill
-		\drow{4,3,7,6,5,11,10,2,1,0,9,8}}
-	\footnotetext{\href{http://www.ccarh.org/publications/data/humdrum/tonerow/files/webern/webern08.pc.krn}{ \texttt{\textasciitilde/webern/webern08.pc.krn} }}
-    
-    \newpage
+	\textit{Ave, Regina Coelorum}\footnote{\href{http://www.ccarh.org/publications/data/humdrum/tonerow/files/webern/webern08.pc.krn}{ \texttt{\textasciitilde/webern/webern08.pc.krn} }}: \hfill
+	\drow{4,3,7,6,5,11,10,2,1,0,9,8}
+	\ddiagram{4,3,7,6,5,11,10,2,1,0,9,8}
     
     % 10.plugin de musescore, conclusiones
-    \section{Página de modificaciones y plugin}
+    \subsection{Página de modificaciones y plugin}
 	
 	La primera vez que realicé este experimento tuve que modificar nota a nota, a mano, la partitura que había escogido. Por este motivo decidí crear estas herramientas, que evitan ese trabajo tedioso y mecánico, pero también sirven para otros propósitos. Por ejemplo, para cambiar una partitura de mayor a menor, o viceversa.
 	
-    He creado una página interactiva que transforma cada nota de una partitura a la nota requerida. Está escrita en Elm y el código puede encontrarse en \url{https://gitlab.com/dodecafonismo/modificaciones}.
-   
-    \begin{wrapfigure}{l}{0.2\textwidth}
-    	\vspace*{-\bigskipamount}
-    	\qrcode{https://modificaciones.netlify.com/}
-    	\vspace*{-2\bigskipamount}
-    \end{wrapfigure} En el código QR está el enlace de la aplicación web. Sus instrucciones de uso se encuentran al final de la página. El enlace es \url{https://modificaciones.netlify.com}.
+    He creado una página interactiva que transforma cada nota de una partitura a la nota requerida. Está escrita en Elm y el código puede encontrarse en \url{https://gitlab.com/dodecafonismo/modificaciones}.  	
+    	
+   	En el enlace \url{https://modificaciones.netlify.com/} está la aplicación web. Sus instrucciones de uso se encuentran al final de la página.
     
-    \section{Obra de Schoenberg} % TODO
+    \subsection{Obra de Schoenberg} % TODO
 %   
 %   	\[\left.\begin{matrix}
 %   	\text{Cromática:}&0&1&2&3&4&5&6&7&8&9&10&11\\
@@ -96,6 +96,6 @@
 %   	\text{Intervalos:}&&2&1&&2&1&&2&1&&2&1\\
 %   	\end{matrix}\right.\]
    	
-    \section{Obras de Berg}
-    \section{Obras de Webern}
-%    \section{Conclusiones}
+    \subsection{Obras de Berg}
+    \subsection{Obras de Webern}
+%    \subsection{Conclusiones}
